--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
                     <div class="topgate1"></div>
                     <div class="bottomgate1"></div>
                     <h2 class="introblock1__title blockcenter">現切新鮮水果</h2>
-                    <div class="introblock1__content">
+                    <div class="introblock1__content color--green-blue">
                         <h3 class="blockcenter">與台灣在地小農合作，使用新鮮水果切片製成，絕不添加任何化學香料，天然100%</h3>
                     </div>
-                    <div class="introblock__mobile"><span class="introblock__mobile___title">現切新鮮水果</span><br> 與台灣在地小農合作，使用新鮮水果切片製成，絕不添加任何化學香料，天然100%
+                    <div class="introblock__mobile"><span class="introblock__mobile___title color--green-blue">現切新鮮水果</span><br> 與台灣在地小農合作，使用新鮮水果切片製成，絕不添加任何化學香料，天然100%
                     </div>
                 </div>
 
@@ -110,10 +110,10 @@
                     <div class="topgate2 z-index50"></div>
                     <div class="bottomgate2 z-index50"></div>
                     <h2 class="introblock2__title blocktop20">知名氣泡泉源</h2>
-                    <div class="introblock2__content">
+                    <div class="introblock2__content color--green-blue">
                         <h3 class="blockcenter z-index10">氣泡來源採用世界知名碳酸氣泡製造商SodaStream，所生產的氣泡，對人體健康無虞</h3>
                     </div>
-                    <div class="introblock__mobile"><span class="introblock__mobile___title">知名氣泡泉源</span><br>氣泡來源採用世界知名碳酸氣泡製造商SodaStream，所生產的氣泡，對人體健康無虞
+                    <div class="introblock__mobile"><span class="introblock__mobile___title color--green-blue">知名氣泡泉源</span><br>氣泡來源採用世界知名碳酸氣泡製造商SodaStream，所生產的氣泡，對人體健康無虞
                     </div>
                 </div>
 
@@ -121,11 +121,11 @@
                     <div class="topgate3 z-index50"></div>
                     <div class="bottomgate3 z-index50"></div>
                     <h2 class="introblock3__title blockbottom30">安全無害用水</h2>
-                    <div class="introblock3__content">
+                    <div class="introblock3__content color--green-blue">
                         <h3 class="blockcenter z-index10">全品項用水來源均經過RO三胞胎過濾器濾除有害物質，並定期檢查生菌數，符合衛生署公布之標準
                         </h3>
                     </div>
-                    <div class="introblock__mobile"><span class="introblock__mobile___title">安全無害用水</span><br>全品項用水來源均經過RO三胞胎過濾器濾除有害物質，並定期檢查生菌數，符合衛生署公布之標準
+                    <div class="introblock__mobile"><span class="introblock__mobile___title color--green-blue">安全無害用水</span><br>全品項用水來源均經過RO三胞胎過濾器濾除有害物質，並定期檢查生菌數，符合衛生署公布之標準
                     </div>
                 </div>
             </div>
@@ -142,7 +142,7 @@
                         <div class="square squareangle1"></div>
                         <div class="leaf1 rellax" data-rellax-speed="0.2"></div><img src="images/drink1.png" alt=""></div>
                     <div class="col-sm-12 col-md-7 col-lg-7  product__desc">
-                        <h2>甜柳冰淇淋氣泡飲
+                        <h2 class="color--primary">甜柳冰淇淋氣泡飲
                             <div class="size"><span class="size__span">M</span><span class="size__span">L</span></div>
                         </h2><br> 本店人氣No1!的氣泡飲，微甜香橙配上香草冰淇淋綿密的口感，與氣泡飲在舌尖彈跳的綜合口感，覺得值得您一試！
                     </div>
@@ -153,7 +153,7 @@
                         <div class="leaf2 rellax" data-rellax-speed="0.8"></div>
                     </div>
                     <div class=" col-sm-12 col-md-7 col-lg-7 order-md-1 order-lg-1  product__desc ">
-                        <h2>盛夏水果氣泡飲
+                        <h2 class="color--primary">盛夏水果氣泡飲
                             <div class="size"><span class="size__span">M</span><span class="size__span">L</span></div>
                         </h2><br> 集結柳橙、葡萄、蘋果等夏天盛產的水果，搭配清涼氣泡基底，喝下這一口，為您的靈魂充滿活力！
                     </div>
@@ -163,7 +163,7 @@
                         <div class="square squareangle3 "></div>
                         <div class="leaf3 rellax" data-rellax-speed="0.5"></div><img src="images/drink3.png " alt=" "></div>
                     <div class="col-sm-12 col-md-7 col-lg-7 product__desc ">
-                        <h2>血橙金桔戀氣泡飲
+                        <h2 class="color--primary">血橙金桔戀氣泡飲
                             <div class="size"><span class="size__span">M</span><span class="size__span">L</span></div>
                         </h2><br> 採用特選血橙跟宜蘭金桔製成的香甜氣泡飲，彷彿血橙杜君的調酒風味，是一款能滿足您對調酒渴望的零酒精無負擔飲品
                     </div>
@@ -191,11 +191,11 @@
                 </div>
                 <div class="col-md-6 col-lg-6 address wow fadeInUp">
                     <br>
-                    <h3>台中總店鋪</h3>
+                    <h3 class="color--primary">台中總店鋪</h3>
                     <i class="fas fa-home"></i> 404台中市北區育才街33-1999號<br>
                     <i class="fas fa-phone"></i>(04)22995283
                     <br> <br> <br>
-                    <h3>高雄新崛江店</h3>
+                    <h3 class="color--primary">高雄新崛江店</h3>
                     <i class="fas fa-home"></i> 800高雄市新興區仁智街290-888號<br>
                     <i class="fas fa-phone"></i>(07)22398765
                     <a class="mainbtn" style="margin-top:60px;margin-left:auto;margin-right: auto; " href="javascript:building()">即刻加盟 <i class="fas fa-chevron-right" style="bottom:-2px;"></i></a>
