--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
 
         <!-- Start Banner -->
         <div class="banner">
-            <h1>關於我們</h1>
+            <h1 class="color--secondary">關於我們</h1>
             <h1>About Us</h1>
             <div class="banner__drink1 drink1 wow fadeIn"></div>
             <div class="banner__drink2 drink2 wow fadeIn"></div>
@@ -61,7 +61,7 @@
     <section class="z-index50" style="padding-bottom: 180px;">
 
         <div class="container productmenu">
-            <h2 style="left: 50%;transform: translateX(-50%);margin: 60px 0px;">聲明</h2>
+            <h2 class="color--primary" style="left: 50%;transform: translateX(-50%);margin: 60px 0px;">聲明</h2>
             <h5> 本網站成立於2020年元月，網站主題、店家住址純屬創作，圖片使用來源為Google公開搜尋圖片，再經個人使用PS美編軟體去背(半透明去背)、色澤調整而成，網站Logo為個人Illustrator繪製創作。
             </h5>
 
