--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
 </head>
 
 <body style="height: 3000px;">
+    <div class="loading bg-color--third">
+        <div id="load">
+            <div>G</div>
+            <div>N</div>
+            <div>I</div>
+            <div>D</div>
+            <div>A</div>
+            <div>O</div>
+            <div>L</div>
+        </div>
+    </div>
 
     <header>
         <!-- Start Navber -->
