--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 </head>
 
-<body style="height: 3000px;">
+<body style="height: 3000px; overflow: hidden;">
     <div class="loading bg-color--third">
         <div id="load">
             <div>G</div>
