--- a/about.html
+++ b/about.html
@@ -66,10 +66,17 @@
             </h5>
 
         </div>
-
-        <div class="col-lg-12">
-            <a class="mainbtn" style="margin-top:60px;margin-left:auto;margin-right: auto;" href="index.html">回首頁</a>
+        <div class="row">
+            <div class="col-lg-3"></div>
+            <div class="col-lg-3">
+                <a class="mainbtn" style="margin-top:60px;margin-left:auto;margin-right: auto;color:orange;background-color: rgb(40, 13, 65);" href="guideline.html">CHECK Guideline</a>
+            </div>
+            <div class="col-lg-3">
+                <a class="mainbtn" style="margin-top:60px;margin-left:auto;margin-right: auto;" href="index.html">回首頁</a>
+            </div>
+            <div class="col-lg-3"></div>
         </div>
+
     </section>
 
 
