--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
             <div class="container mainbtnbar maxwidth100">
                 <div class="row">
                     <div class="col-sm-4 col-md-4 col-lg-4">
-                        <a class="mainbtn wow bounceInUp" href="productpage.html">飲品一覽</a>
+                        <a class="secondarybtn wow bounceInUp" href="productpage.html">飲品一覽</a>
                     </div>
                     <div class="col-sm-4 col-md-4 col-lg-4">
-                        <a class="mainbtn wow bounceInUp" data-wow-delay="0.5s" href="#location">全台門市</a>
+                        <a class="secondarybtn wow bounceInUp" data-wow-delay="0.5s" href="#location">全台門市</a>
                     </div>
                     <div class="col-sm-4 col-md-4 col-lg-4">
-                        <a class="mainbtn wow bounceInUp" data-wow-delay="1s" href="about.html">關於我們</a>
+                        <a class="secondarybtn wow bounceInUp" data-wow-delay="1s" href="about.html">關於我們</a>
                     </div>
                 </div>
             </div>
@@ -181,7 +181,7 @@
                 </div>
                 <div class="row wow fadeInUp" data-wow-offset="100">
                     <div class="col-lg-12">
-                        <a class="mainbtn" href="productpage.html">更多飲品 <i class="fas fa-chevron-right" style="bottom:-2px;"></i></a>
+                        <a class="mainbtn" href="productpage.html">更多飲品 <i class="fas fa-chevron-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -209,7 +209,7 @@
                     <h3 class="color--primary">高雄新崛江店</h3>
                     <i class="fas fa-home"></i> 800高雄市新興區仁智街290-888號<br>
                     <i class="fas fa-phone"></i>(07)22398765
-                    <a class="mainbtn" style="margin-top:60px;margin-left:auto;margin-right: auto; " href="javascript:building()">即刻加盟 <i class="fas fa-chevron-right" style="bottom:-2px;"></i></a>
+                    <a class="secondarybtn" style="margin-top:60px;margin-left:auto;margin-right: auto; " href="javascript:building()">即刻加盟 <i class="fas fa-chevron-right" ></i></a>
                 </div>
             </div>
 
