--- a/productpage.html
+++ b/productpage.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="css/animate.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
     <!-- fontawesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
     <!-- Self CSS -->
     <link rel="stylesheet" href="css/u-style.css">
@@ -70,11 +71,13 @@
                 <div class="row no-gutters">
                     <div class="col-sm-12 col-md-5 col-lg-5 ">
                         <div class="square squareangle1"></div>
-                        <img src="images/drink1.png" alt=""></div>
+                        <img src="images/drink1.png" alt="">
+                    </div>
                     <div class="col-sm-12 col-md-7 col-lg-7  product__desc">
                         <h2 class="color--primary">甜柳冰淇淋氣泡飲
                             <div class="size"><span class="size__span">M</span><span class="size__span">L</span></div>
-                        </h2><br> 本店人氣No1!的氣泡飲，微甜香橙配上香草冰淇淋綿密的口感，與氣泡飲在舌尖彈跳的綜合口感，覺得值得您一試！
+                        </h2><br>
+                        <p>本店人氣No1!的氣泡飲，微甜香橙配上香草冰淇淋綿密的口感，與氣泡飲在舌尖彈跳的綜合口感，覺得值得您一試！</p>
                     </div>
                 </div>
                 <div class="row no-gutters">
@@ -85,17 +88,20 @@
                     <div class=" col-sm-12 col-md-7 col-lg-7 product__desc">
                         <h2 class="color--primary">盛夏水果氣泡飲
                             <div class="size"><span class="size__span">M</span><span class="size__span">L</span></div>
-                        </h2><br> 集結柳橙、葡萄、蘋果等夏天盛產的水果，搭配清涼氣泡基底，喝下這一口，為您的靈魂充滿活力！
+                        </h2><br>
+                        <p>集結柳橙、葡萄、蘋果等夏天盛產的水果，搭配清涼氣泡基底，喝下這一口，為您的靈魂充滿活力！</p>
                     </div>
                 </div>
                 <div class="row no-gutters">
                     <div class="col-sm-12 col-md-5 col-lg-5 ">
                         <div class="square squareangle3 "></div>
-                        <img src="images/drink3.png" alt=" "></div>
+                        <img src="images/drink3.png" alt=" ">
+                    </div>
                     <div class="col-sm-12 col-md-7 col-lg-7 product__desc ">
                         <h2 class="color--primary">血橙金桔戀氣泡飲
                             <div class="size"><span class="size__span">M</span><span class="size__span">L</span></div>
-                        </h2><br> 採用特選血橙跟宜蘭金桔製成的香甜氣泡飲，彷彿血橙杜君的調酒風味，是一款能滿足您對調酒渴望的零酒精無負擔飲品
+                        </h2><br>
+                        <p> 採用特選血橙跟宜蘭金桔製成的香甜氣泡飲，彷彿血橙杜君的調酒風味，是一款能滿足您對調酒渴望的零酒精無負擔飲品</p>
                     </div>
                 </div>
             </div>
@@ -104,11 +110,13 @@
                 <div class="row no-gutters">
                     <div class="col-sm-12 col-md-5 col-lg-5 ">
                         <div class="square squareangle1"></div>
-                        <img src="images/drink4.png" alt=""></div>
+                        <img src="images/drink4.png" alt="">
+                    </div>
                     <div class="col-sm-12 col-md-7 col-lg-7  product__desc">
                         <h2 class="color--primary">水蜜桃西瓜氣冰茶
                             <div class="size"><span class="size__span">M</span><span class="size__span">L</span></div>
-                        </h2><br> 以西瓜汁和長島冰茶的原料為基底茶，在配上新鮮水蜜桃果粒，一款大人小孩都喜歡的零酒精冰茶氣泡飲料
+                        </h2><br>
+                        <p>以西瓜汁和長島冰茶的原料為基底茶，在配上新鮮水蜜桃果粒，一款大人小孩都喜歡的零酒精冰茶氣泡飲料</p>
                     </div>
                 </div>
                 <div class="row no-gutters">
@@ -119,23 +127,30 @@
                     <div class=" col-sm-12 col-md-7 col-lg-7 product__desc">
                         <h2 class="color--primary">莓果氣冰茶
                             <div class="size"><span class="size__span">M</span><span class="size__span">L</span></div>
-                        </h2><br> 使用對皮膚很好的蔓越莓及保護眼睛的藍莓所調成的氣泡飲
+                        </h2><br>
+                        <p> 使用對皮膚很好的蔓越莓及保護眼睛的藍莓所調成的氣泡飲</p>
                     </div>
                 </div>
                 <div class="row no-gutters">
                     <div class="col-sm-12 col-md-5 col-lg-5 ">
                         <div class="square squareangle3 "></div>
-                        <img src="images/drink6.png " alt=" "></div>
+                        <img src="images/drink6.png " alt=" ">
+                    </div>
                     <div class="col-sm-12 col-md-7 col-lg-7 product__desc ">
                         <h2 class="color--primary">午後氣冰茶
                             <div class="size"><span class="size__span">M</span><span class="size__span">L</span></div>
-                        </h2><br> 以檸檬和西瓜汁打底，採用大湖草莓顆粒增添酸甜味，喝過一口，彷彿再次回到初戀
+                        </h2><br>
+                        <p> 以檸檬和西瓜汁打底，採用大湖草莓顆粒增添酸甜味，喝過一口，彷彿再次回到初戀</p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-12">
-                <h2 class="wow fadeInUp color--primary" style=" display:block;margin-top:100px;text-align: center;">迫不急待想來一杯了嗎?</h2>
-                <a class="mainbtn wow fadeInUp" style="margin-top:40px;margin-left:auto;margin-right: auto; padding:0px 3px;" href="index.html#location">尋找我們的門市 <i class="fas fa-chevron-right" style="bottom:-2px;"></i></a>
+                <h2 class="wow fadeInUp color--primary"
+                    style=" display:block;margin-top:100px;text-align: center;letter-spacing: 5px;">
+                    迫不急待想來一杯了嗎?</h2>
+                <a class="mainbtn wow fadeInUp"
+                    style="margin-top:40px;margin-left:auto;margin-right: auto; padding:0px 3px;"
+                    href="index.html#location">尋找我們的門市 <i class="fas fa-chevron-right" style="bottom:-2px;"></i></a>
             </div>
         </div>
 
