--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="slick/slick.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
     <!-- fontawesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="slick/slick-theme.css">
     <!-- Self CSS -->
     <link rel="stylesheet" href="css/u-style.css">
@@ -52,7 +53,8 @@
         <div class="mainpage mainpage__bgcover">
 
             <div class="mainpage__brandlogo brandlogo"></div>
-            <div class="mainpage__maintitle maintitle wow fadeInDown" data-wow-offset="1" data-wow-duration="2s">充滿願望的氣泡飲料<br>．<br>．<br>．</div>
+            <div class="mainpage__maintitle maintitle wow fadeInDown" data-wow-offset="1" data-wow-duration="2s">
+                充滿願望的氣泡飲料<br>．<br>．<br>．</div>
             <div class="mainpage__drink1 drink1"></div>
             <div class="mainpage__drink2 drink2"></div>
             <div class="mainpage__drink3 drink3"></div>
@@ -109,34 +111,40 @@
                 <div id="introblock1" class="introblock introblock1 wow fadeInUp" data-wow-offset="100">
                     <div class="topgate1"></div>
                     <div class="bottomgate1"></div>
-                    <h2 class="introblock1__title blockcenter">現切新鮮水果</h2>
+                    <h3 class="introblock1__title blockcenter">現切新鮮水果</h3>
                     <div class="introblock1__content color--green-blue">
-                        <h3 class="blockcenter">與台灣在地小農合作，使用新鮮水果切片製成，絕不添加任何化學香料，天然100%</h3>
+                        <h5 class="blockcenter">與台灣在地小農合作，使用新鮮水果切片製成，絕不添加任何化學香料，天然100%</h5>
                     </div>
-                    <div class="introblock__mobile"><span class="introblock__mobile___title color--green-blue">現切新鮮水果</span><br> 與台灣在地小農合作，使用新鮮水果切片製成，絕不添加任何化學香料，天然100%
+                    <div class="introblock__mobile"><span
+                            class="introblock__mobile___title color--green-blue">現切新鮮水果</span><br>
+                        <p>與台灣在地小農合作，使用新鮮水果切片製成，絕不添加任何化學香料，天然100%</p>
                     </div>
                 </div>
 
                 <div id="introblock2" class="introblock introblock2 wow fadeInUp" data-wow-offset="100">
                     <div class="topgate2 z-index50"></div>
                     <div class="bottomgate2 z-index50"></div>
-                    <h2 class="introblock2__title blocktop20">知名氣泡泉源</h2>
+                    <h3 class="introblock2__title blocktop20">知名氣泡泉源</h3>
                     <div class="introblock2__content color--green-blue">
-                        <h3 class="blockcenter z-index10">氣泡來源採用世界知名碳酸氣泡製造商SodaStream，所生產的氣泡，對人體健康無虞</h3>
+                        <h5 class="blockcenter z-index10">氣泡來源採用世界知名碳酸氣泡製造商SodaStream，所生產的氣泡，對人體健康無虞</h5>
                     </div>
-                    <div class="introblock__mobile"><span class="introblock__mobile___title color--green-blue">知名氣泡泉源</span><br>氣泡來源採用世界知名碳酸氣泡製造商SodaStream，所生產的氣泡，對人體健康無虞
+                    <div class="introblock__mobile"><span
+                            class="introblock__mobile___title color--green-blue">知名氣泡泉源</span><br>
+                        <p>氣泡來源採用世界知名碳酸氣泡製造商SodaStream，所生產的氣泡，對人體健康無虞</p>
                     </div>
                 </div>
 
                 <div id="introblock3" class="introblock introblock3 wow fadeInUp" data-wow-offset="100">
                     <div class="topgate3 z-index50"></div>
                     <div class="bottomgate3 z-index50"></div>
-                    <h2 class="introblock3__title blockbottom30">安全無害用水</h2>
+                    <h3 class="introblock3__title blockbottom30">安全無害用水</h3>
                     <div class="introblock3__content color--green-blue">
-                        <h3 class="blockcenter z-index10">全品項用水來源均經過RO三胞胎過濾器濾除有害物質，並定期檢查生菌數，符合衛生署公布之標準
-                        </h3>
+                        <h5 class="blockcenter z-index10">全品項用水來源均經過RO三胞胎過濾器濾除有害物質，並定期檢查生菌數，符合衛生署公布之標準
+                        </h5>
                     </div>
-                    <div class="introblock__mobile"><span class="introblock__mobile___title color--green-blue">安全無害用水</span><br>全品項用水來源均經過RO三胞胎過濾器濾除有害物質，並定期檢查生菌數，符合衛生署公布之標準
+                    <div class="introblock__mobile"><span
+                            class="introblock__mobile___title color--green-blue">安全無害用水</span><br>
+                        <p>全品項用水來源均經過RO三胞胎過濾器濾除有害物質，並定期檢查生菌數，符合衛生署公布之標準</p>
                     </div>
                 </div>
             </div>
@@ -146,16 +154,19 @@
 
         <!-- Start Popular drink -->
         <div class="maxwidth100 populardrink">
-            <h1 class="wow fadeInUp" data-wow-offset="100" style="margin-bottom:40px;"><span class="pointcolor">Popular</span> Drink | 熱銷飲品</h1>
+            <h1 class="wow fadeInUp" data-wow-offset="100" style="margin-bottom:40px;"><span
+                    class="pointcolor">Popular</span> Drink | 熱銷飲品</h1>
             <div class="container">
                 <div class="row no-gutters wow fadeInLeft" data-wow-offset="100">
                     <div class="col-sm-12 col-md-5 col-lg-5 ">
                         <div class="square squareangle1"></div>
-                        <div class="leaf1 rellax" data-rellax-speed="0.2"></div><img src="images/drink1.png" alt=""></div>
+                        <div class="leaf1 rellax" data-rellax-speed="0.2"></div><img src="images/drink1.png" alt="">
+                    </div>
                     <div class="col-sm-12 col-md-7 col-lg-7  product__desc">
                         <h2 class="color--primary">甜柳冰淇淋氣泡飲
                             <div class="size"><span class="size__span">M</span><span class="size__span">L</span></div>
-                        </h2><br> 本店人氣No1!的氣泡飲，微甜香橙配上香草冰淇淋綿密的口感，與氣泡飲在舌尖彈跳的綜合口感，覺得值得您一試！
+                        </h2><br>
+                        <p>本店人氣No1!的氣泡飲，微甜香橙配上香草冰淇淋綿密的口感，與氣泡飲在舌尖彈跳的綜合口感，覺得值得您一試！</p>
                     </div>
                 </div>
                 <div class="row no-gutters wow fadeInRight" data-wow-offset="100">
@@ -166,17 +177,20 @@
                     <div class=" col-sm-12 col-md-7 col-lg-7 order-md-1 order-lg-1  product__desc ">
                         <h2 class="color--primary">盛夏水果氣泡飲
                             <div class="size"><span class="size__span">M</span><span class="size__span">L</span></div>
-                        </h2><br> 集結柳橙、葡萄、蘋果等夏天盛產的水果，搭配清涼氣泡基底，喝下這一口，為您的靈魂充滿活力！
+                        </h2><br>
+                        <p>集結柳橙、葡萄、蘋果等夏天盛產的水果，搭配清涼氣泡基底，喝下這一口，為您的靈魂充滿活力！</p>
                     </div>
                 </div>
                 <div class="row no-gutters wow fadeInLeft" data-wow-offset="100">
                     <div class="col-sm-12 col-md-5 col-lg-5 ">
                         <div class="square squareangle3 "></div>
-                        <div class="leaf3 rellax" data-rellax-speed="0.5"></div><img src="images/drink3.png " alt=" "></div>
+                        <div class="leaf3 rellax" data-rellax-speed="0.5"></div><img src="images/drink3.png " alt=" ">
+                    </div>
                     <div class="col-sm-12 col-md-7 col-lg-7 product__desc ">
                         <h2 class="color--primary">血橙金桔戀氣泡飲
                             <div class="size"><span class="size__span">M</span><span class="size__span">L</span></div>
-                        </h2><br> 採用特選血橙跟宜蘭金桔製成的香甜氣泡飲，彷彿血橙杜君的調酒風味，是一款能滿足您對調酒渴望的零酒精無負擔飲品
+                        </h2><br>
+                        <p>採用特選血橙跟宜蘭金桔製成的香甜氣泡飲，彷彿血橙杜君的調酒風味，是一款能滿足您對調酒渴望的零酒精無負擔飲品</p>
                     </div>
                 </div>
                 <div class="row wow fadeInUp" data-wow-offset="100">
@@ -194,10 +208,12 @@
         <!-- Start Location -->
 
         <div class="container location maxwidth100">
-            <h1 class="wow fadeInUp" style="margin-bottom:40px;" data-wow-offset="100"><span class="pointcolor">Where</span> we are | 店鋪位址</h1>
+            <h1 class="wow fadeInUp" style="margin-bottom:40px;" data-wow-offset="100"><span
+                    class="pointcolor">Where</span> we are | 店鋪位址</h1>
             <div class="row no-gutters" style="margin-bottom: 180px;">
                 <div class="col-md-6 col-lg-6 wow fadeInUp">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5588.986866202306!2d120.68129687891617!3d24.14998579071418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34693d688e719879%3A0x79ccdb5926a580bb!2z5LiA5Lit6KGX5aSc5biC!5e0!3m2!1szh-TW!2stw!4v1577774611339!5m2!1szh-TW!2stw"
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5588.986866202306!2d120.68129687891617!3d24.14998579071418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34693d688e719879%3A0x79ccdb5926a580bb!2z5LiA5Lit6KGX5aSc5biC!5e0!3m2!1szh-TW!2stw!4v1577774611339!5m2!1szh-TW!2stw"
                         frameborder="0" allowfullscreen=""></iframe>
                 </div>
                 <div class="col-md-6 col-lg-6 address wow fadeInUp">
@@ -209,7 +225,8 @@
                     <h3 class="color--primary">高雄新崛江店</h3>
                     <i class="fas fa-home"></i> 800高雄市新興區仁智街290-888號<br>
                     <i class="fas fa-phone"></i>(07)22398765
-                    <a class="secondarybtn" style="margin-top:60px;margin-left:auto;margin-right: auto; " href="javascript:building()">即刻加盟 <i class="fas fa-chevron-right" ></i></a>
+                    <a class="secondarybtn" style="margin-top:60px;margin-left:auto;margin-right: auto; "
+                        href="javascript:building()">即刻加盟 <i class="fas fa-chevron-right"></i></a>
                 </div>
             </div>
 
