h1 margin larger, jumbotron pic larger

--- a/index.html
+++ b/index.html
@@ -187,8 +187,7 @@
 
         <!-- Start Popular drink -->
         <div class="maxwidth100 populardrink">
-            <h1 class="wow fadeInUp" data-wow-offset="100" style="margin-bottom:40px;"><span
-                    class="pointcolor">Popular</span> Drink | 熱銷飲品</h1>
+            <h1 class="wow fadeInUp" data-wow-offset="100"><span class="pointcolor">Popular</span> Drink | 熱銷飲品</h1>
             <div class="container">
                 <div class="row no-gutters wow fadeInLeft" data-wow-offset="100">
                     <div class="col-sm-12 col-md-5 col-lg-5 ">
@@ -241,8 +240,7 @@
         <!-- Start Location -->
 
         <div class="container location maxwidth100">
-            <h1 class="wow fadeInUp" style="margin-bottom:40px;" data-wow-offset="100"><span
-                    class="pointcolor">Where</span> we are | 店鋪位址</h1>
+            <h1 class="wow fadeInUp" data-wow-offset="100"><span class="pointcolor">Where</span> we are | 店鋪位址</h1>
             <div class="row no-gutters" style="margin-bottom: 180px;">
                 <div class="col-md-6 col-lg-6 wow fadeInUp">
                     <iframe
